--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,6 +4,7 @@
     <title>QUIZ: Qual país teve o maior PIB em 2021?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="quiz.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
 </head>
 
 <body>
