--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,6 +4,7 @@
     <title>QUIZ: Qual país teve o maior PIB em 2021?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="quiz.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.5/css/flag-icons.min.css" integrity="sha512-UwbBNAFoECXUPeDhlKR3zzWU3j8ddKIQQsDOsKhXQGdiB5i3IHEXr9kXx82+gaHigbNKbTDp3VY/G6gZqva6ZQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
     <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
 </head>
 
@@ -11,10 +12,10 @@
     <section id="quiz">
         <h1 class="question">Qual país teve o maior PIB em 2021?</h1>
         <div class="options">
-            <div class="item cn">China</div>
-            <div class="item us certo">EUA</div>
-            <div class="item de">Alemanha</div>
-            <div class="item gb">Inglaterra</div>
+            <div class="item flag-icon-cn">China</div>
+            <div class="item flag-icon-us certo">EUA</div>
+            <div class="item flag-icon-de">Alemanha</div>
+            <div class="item flag-icon-gb">Inglaterra</div>
         </div>
     </section>
     <section class="divresposta">
