--- a/quiz/index.html
+++ b/quiz/index.html
@@ -12,15 +12,15 @@
     <section id="quiz">
         <h1 class="question">Qual país teve o maior PIB em 2021?</h1>
         <div class="options">
-            <div class="item flag-icon-cn">China</div>
-            <div class="item flag-icon-us certo">EUA</div>
-            <div class="item flag-icon-de">Alemanha</div>
-            <div class="item flag-icon-gb">Inglaterra</div>
+            <div class="item animabg flag-icon-cn">China</div>
+            <div class="item animabg flag-icon-us certo">EUA</div>
+            <div class="item animabgde flag-icon-de">Alemanha</div>
+            <div class="item animabg flag-icon-gb">Inglaterra</div>
         </div>
     </section>
     <section class="divresposta">
         <p class="presposta"></p>
-        <p>PIB estado-unidense foi de 22,94 trilhões de dólares.</p>
+        <p>É o americano, no valor de U$ 22,94 trilhões.</p>
     </section>
 
     <script type="text/javascript" src="quiz.js"></script>
