--- a/quiz/index.html
+++ b/quiz/index.html
@@ -10,17 +10,16 @@
 
 <body>
     <section id="quiz">
-        <h1 class="question">Qual país teve o maior PIB em 2021?</h1>
+        <h1 class="question">Qual país tem o maior PIB?</h1>
         <div class="options">
             <div class="item animabg flag-icon-cn">China</div>
             <div class="item animabg flag-icon-us certo">EUA</div>
-            <div class="item animabgde flag-icon-de">Alemanha</div>
             <div class="item animabg flag-icon-gb">Inglaterra</div>
         </div>
     </section>
     <section class="divresposta">
         <p class="presposta"></p>
-        <p>É o americano, no valor de U$ 22,94 trilhões.</p>
+        <p>É o americano, no valor de U$ 22,94 trilhões. O dado é de 2021.</p>
     </section>
 
     <script type="text/javascript" src="quiz.js"></script>
