First try animation

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -11,10 +11,17 @@
 <body>
     <section id="quiz">
         <h1 class="question">Qual país tem o maior PIB?</h1>
-        <div class="options">
-            <div class="item animabg flag-icon-cn">China</div>
-            <div class="item animabg flag-icon-us certo">EUA</div>
-            <div class="item animabg flag-icon-gb">Inglaterra</div>
+        <div class="grafico">
+            <div class="legenda">
+                <div class="valor">U$ 22,9</div>
+                <div class="valor">U$ 16,8</div>
+                <div class="valor">U$ 3,1</div>
+            </div>
+            <div class="options">
+                <div class="item animabg flag-icon-us certo">USA</div>
+                <div class="item animabg flag-icon-cn">CHN</div>
+                <div class="item animabg flag-icon-gb">GBR</div>
+            </div>
         </div>
     </section>
     <section class="divresposta">
