--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>QUIZ: Qual país teve o maior PIB em 2021?</title>
+    <title>Descubra a bandeira do país com o maior PIB do mundo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="quiz.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.5/css/flag-icons.min.css" integrity="sha512-UwbBNAFoECXUPeDhlKR3zzWU3j8ddKIQQsDOsKhXQGdiB5i3IHEXr9kXx82+gaHigbNKbTDp3VY/G6gZqva6ZQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
@@ -10,7 +10,7 @@
 
 <body>
     <section id="quiz">
-        <h1 class="question">Qual país tem o maior PIB?</h1>
+        <h1 class="question">Qual bandeira pertence ao país que possui o maior PIB?</h1>
         <div class="grafico">
             <div class="legenda">
                 <div class="valor">U$ 22,9</div>
@@ -18,15 +18,15 @@
                 <div class="valor">U$ 3,1</div>
             </div>
             <div class="options">
-                <div class="item animabg flag-icon-us certo">USA</div>
-                <div class="item animabg flag-icon-cn">CHN</div>
-                <div class="item animabg flag-icon-gb">GBR</div>
+                <div class="item animabg flag-icon-us certo"></div>
+                <div class="item animabg flag-icon-cn"></div>
+                <div class="item animabg flag-icon-gb"></div>
             </div>
         </div>
     </section>
     <section class="divresposta">
         <p class="presposta"></p>
-        <p>É o americano, no valor de U$ 22,94 trilhões. O dado é de 2021.</p>
+        <p>É o americano! Segundo o FMI, o valor chegou à incríveis 22,94 trilhões de dólares em 2021. Já a China, 16,8 trilhões, enquanto a Inglaterra, 3,1.</p>
     </section>
 
     <script type="text/javascript" src="quiz.js"></script>
