Change horizontal to vertical

--- a/quiz-horizontal/index.html
+++ b/quiz-horizontal/index.html
@@ -9,28 +9,24 @@
 </head>
 
 <body>
-    <section class="divresposta">
-        <p class="presposta"></p>
-        <p>É o americano! Segundo o FMI, o valor chegou à incríveis U$ 22,94 trilhões em 2021.</p>
-    </section>
     <section id="quiz">
         <h1 class="question">Qual bandeira pertence ao país que possui o maior PIB?</h1>
         <div class="grafico">
-            <div class="options">
-                <div class="item animabg flag-icon-gb"></div>
-                <div class="item animabg flag-icon-us certo"></div>
-                <div class="item animabg flag-icon-de"></div>
-                <div class="item animabg flag-icon-jp"></div>
-                <div class="item animabg flag-icon-cn"></div>
-            </div>
             <div class="legenda">
-                <div class="valor">U$ 3,1</div>
                 <div class="valor">U$ 22,9</div>
-                <div class="valor">U$ 4,2</div>
-                <div class="valor">U$ 5,1</div>
                 <div class="valor">U$ 16,8</div>
+                <div class="valor">U$ 3,1</div>
+            </div>
+            <div class="options">
+                <div class="item animabg flag-icon-us certo"></div>
+                <div class="item animabg flag-icon-cn"></div>
+                <div class="item animabg flag-icon-gb"></div>
             </div>
         </div>
+    </section>
+    <section class="divresposta">
+        <p class="presposta"></p>
+        <p>É o americano! Segundo o FMI, o valor chegou à incríveis 22,94 trilhões de dólares em 2021. Já a China, 16,8 trilhões, enquanto a Inglaterra, 3,1.</p>
     </section>
 
     <script type="text/javascript" src="quiz.js"></script>
