--- a/quiz/index.html
+++ b/quiz/index.html
@@ -22,6 +22,7 @@
                 <div class="item animabg flag-icon-de"></div>
                 <div class="item animabg flag-icon-jp"></div>
                 <div class="item animabg flag-icon-cn"></div>
+                <div class="item animabg flag-icon-br"></div>
             </div>
             <div class="legenda">
                 <div class="valor">U$ 3,1</div>
@@ -29,6 +30,7 @@
                 <div class="valor">U$ 4,2</div>
                 <div class="valor">U$ 5,1</div>
                 <div class="valor">U$ 16,8</div>
+                <div class="valor">U$ 1,6</div>
             </div>
         </div>
     </section>
