--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,7 +5,7 @@
     <title>Descubra a bandeira do país com o maior PIB do mundo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="quiz.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.5/css/flag-icons.min.css" integrity="sha512-UwbBNAFoECXUPeDhlKR3zzWU3j8ddKIQQsDOsKhXQGdiB5i3IHEXr9kXx82+gaHigbNKbTDp3VY/G6gZqva6ZQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
     <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
 </head>
@@ -43,7 +43,7 @@
         </section>
     </main>
 
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="quiz.js"></script>
 
 </body>
 
