--- a/scroll/index.html
+++ b/scroll/index.html
@@ -5,31 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Passo a passo com scroll</title>
     <link rel="stylesheet" href="scroll.css" />
+    <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
 </head>
 <body>
   <main>
+    
+    <div data-fone="01" class="nomefone">HTC Dream</div>
+    <div data-fone="02" class="nomefone">HTC Magic</div>
+    <div data-fone="03" class="nomefone">Nexus One</div>
+    <div data-fone="04" class="nomefone">Nexus S</div>
+    <div data-fone="05" class="nomefone">Galaxy Nexus</div>
 
     <section id="passos">
 
       <div class="p0 pa">
-        <img src="images/phones/01.png" alt="Passo 0"/>
+        <h1>Linha do tempo dos Google Phones</h1>
+        <h3>Navegue para descobrir☝️</h3>
       </div>
 
       <div class="p1">
-        <img src="images/phones/02.png" alt="Passo 1"/>
+        <img src="images/phones/01.png" alt="Passo 1"/>
       </div>
 
       <div class="p2">
-        <img src="images/phones/03.png" alt="Passo 2"/>
+        <img src="images/phones/02.png" alt="Passo 2"/>
       </div>
 
       <div class="p3">
-        <img src="images/phones/04.png" alt="Passo 3"/>
+        <img src="images/phones/03.png" alt="Passo 3"/>
       </div>
 
       <div class="p4">
-        <img src="images/phones/05.png" alt="Passo 4"/>
+        <img src="images/phones/04.png" alt="Passo 4"/>
       </div>
+
+      <div class="p5">
+        <img src="images/phones/05.png" alt="Passo 5"/>
+      </div>
+
+      <div class="p6">
+        
+      </div>
+
     </section>
 
 
@@ -39,6 +56,8 @@
       <div data-alvo="p2"></div>
       <div data-alvo="p3"></div>
       <div data-alvo="p4"></div>
+      <div data-alvo="p5"></div>
+      <div data-alvo="p6"></div>
     </div>
 
   </main>
