--- a/scroll/index.html
+++ b/scroll/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passo a passo com scroll</title>
+    <title>Linha do tempo dos Google Phones</title>
     <link rel="stylesheet" href="scroll.css" />
     <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
 </head>
@@ -17,7 +17,17 @@
       <div data-sn="s03"><div class="specs"><p>HTC Nexus One</p><p>Janeiro (2010)</p><p>Eclair (2.1)</p></div></div>
       <div data-sn="s04"><div class="specs"><p>Samsung Nexus S</p><p>Dezembro (2010)</p><p>Gingerbread (2.3)</p></div></div>
       <div data-sn="s05"><div class="specs"><p>Samsung Galaxy Nexus</p><p>Novembro (2011)</p><p>Ice Cream Sandwich (4.0)</p></div></div>
-      <div data-sn="s06"><div class="specs"><p>LG Galaxy Nexus 4</p><p>Novembro (2012)</p><p>Jelly Bean (4.2)</p></div></div>
+      <div data-sn="s06"><div class="specs"><p>LG Nexus 4</p><p>Novembro (2012)</p><p>Jelly Bean (4.2)</p></div></div>
+      <div data-sn="s07"><div class="specs"><p>LG Nexus 5</p><p>Outubro (2013)</p><p>Kit Kat (4.4)</p></div></div>
+      <div data-sn="s08"><div class="specs"><p>Motorola Nexus 6</p><p>Novembro (2014)</p><p>Lollipop (5.0)</p></div></div>
+      <div data-sn="s09"><div class="specs"><p>Motorola Nexus 6P</p><p>Setembro (2015)</p><p>Marshmallow (6.0)</p></div></div>
+      <div data-sn="s10"><div class="specs"><p>Google Pixel</p><p>Outubro (2016)</p><p>Nougat (7.1)</p></div></div>
+      <div data-sn="s11"><div class="specs"><p>Google Pixel 2</p><p>Outubro (2017)</p><p>Oreo (8.0)</p></div></div>
+      <div data-sn="s12"><div class="specs"><p>Google Pixel 3</p><p>Outubro (2018)</p><p>Pie (9.0)</p></div></div>
+      <div data-sn="s13"><div class="specs"><p>Google Pixel 4</p><p>Outubro (2019)</p><p>10.0</p></div></div>
+      <div data-sn="s14"><div class="specs"><p>Google Pixel 5</p><p>Outubro (2020)</p><p>Android 11 (Red Velvet Cake)</p></div></div>
+      <div data-sn="s15"><div class="specs"><p>Google Pixel 6</p><p>Outubro (2021)</p><p>Android 12 (Snow Cone)</p></div></div>
+      <div data-sn="s16"><div class="specs"><p>Google Pixel 7</p><p>Outubro (2022)</p><p>Android 13 (Tiramissu)</p></div></div>
     </section>
 
     <section id="phones">
@@ -29,27 +39,67 @@
       </div>
 
       <div class="s01">
-        <img src="images/phones/01.png"/>
+        <img src="images/phones/01.png" alt="HTC Dream"/>
       </div>
 
       <div class="s02">
-        <img src="images/phones/02.png"/>
+        <img src="images/phones/02.png" alt="HTC Magic"/>
       </div>
 
       <div class="s03">
-        <img src="images/phones/03.png"/>
+        <img src="images/phones/03.png" alt="HTC Nexus One"/>
       </div>
 
       <div class="s04">
-        <img src="images/phones/04.png"/>
+        <img src="images/phones/04.png" alt="Samsung Nexus S"/>
       </div>
 
       <div class="s05">
-        <img src="images/phones/05.png"/>
+        <img src="images/phones/05.png" alt="Samsung Galaxy Nexus"/>
       </div>
 
       <div class="s06">
-        <img src="images/phones/06.png"/>
+        <img src="images/phones/06.png" alt="LG Nexus 4"/>
+      </div>
+
+      <div class="s07">
+        <img src="images/phones/07.png" alt="LG Nexus 5"/>
+      </div>
+
+      <div class="s08">
+        <img src="images/phones/08.png" alt="Motorola Nexus 6"/>
+      </div>
+
+      <div class="s09">
+        <img src="images/phones/09.png" alt="Huawei Nexus 6P"/>
+      </div>
+
+      <div class="s10">
+        <img src="images/phones/10.png" alt="Google Pixel"/>
+      </div>
+
+      <div class="s11">
+        <img src="images/phones/11.png" alt="Google Pixel 2"/>
+      </div>
+
+      <div class="s12">
+        <img src="images/phones/12.png" alt="Google Pixel 3"/>
+      </div>
+
+      <div class="s13">
+        <img src="images/phones/13.png" alt="Google Pixel 4"/>
+      </div>
+
+      <div class="s14">
+        <img src="images/phones/14.png" alt="Google Pixel 5"/>
+      </div>
+
+      <div class="s15">
+        <img src="images/phones/15.png" alt="Google Pixel 6"/>
+      </div>
+
+      <div class="s16">
+        
       </div>
 
     </section>
