--- a/scroll/index.html
+++ b/scroll/index.html
@@ -34,7 +34,8 @@
 
       <div class="s00 show">
         <h2>Linha do tempo</h2>
-        <h1>Google Phones</h1>
+        <h1>Celulares</h2>
+        <img src="images/logogoogle.png" alt="Phone by Google"/>
         <h3>Navegue para descobrir☝️</h3>
       </div>
 
