--- a/scroll/index.html
+++ b/scroll/index.html
@@ -36,7 +36,7 @@
         <h2>Linha do tempo</h2>
         <h1>Celulares</h2>
         <img src="images/logogoogle.png" alt="Phone by Google"/>
-        <h3>Navegue para descobrir☝️</h3>
+        <h3>Navegue para descobrir <p id="arrasta">☝️</p></h3>
       </div>
 
       <div class="s01">
@@ -100,7 +100,7 @@
       </div>
 
       <div class="s16">
-        
+        <img src="images/phones/16.png" alt="Google Pixel 7"/>
       </div>
 
     </section>
