--- a/scroll/index.html
+++ b/scroll/index.html
@@ -28,15 +28,16 @@
       <div data-sn="s14"><div class="specs"><p>Google Pixel 5</p><p>Outubro (2020)</p><p>Android 11 (Red Velvet Cake)</p></div></div>
       <div data-sn="s15"><div class="specs"><p>Google Pixel 6</p><p>Outubro (2021)</p><p>Android 12 (Snow Cone)</p></div></div>
       <div data-sn="s16"><div class="specs"><p>Google Pixel 7</p><p>Outubro (2022)</p><p>Android 13 (Tiramissu)</p></div></div>
+      <div data-sn="s17"><div class="specs"></div>
     </section>
 
     <section id="phones">
 
-      <div class="s00 show">
+      <div id="inicio" class="s00 show">
         <h2>Linha do tempo</h2>
         <h1>Celulares</h2>
         <img src="images/logogoogle.png" alt="Phone by Google"/>
-        <h3>Navegue para descobrir <p id="arrasta">☝️</p></h3>
+        <h3>Navegue para descobrir <p class="arrasta">☝️</p></h3>
       </div>
 
       <div class="s01">
@@ -101,6 +102,12 @@
 
       <div class="s16">
         <img src="images/phones/16.png" alt="Google Pixel 7"/>
+      </div>
+
+      <div class="s17">
+        <img id="v17" src="images/phones/17-vertical.png" alt="Família de telefones Google"/>
+        <img id="h17" src="images/phones/17-horizontal.png" alt="Família de telefones Google"/>
+        <h2>por @todearaujo</h2>
       </div>
 
     </section>
