--- a/scroll/index.html
+++ b/scroll/index.html
@@ -28,16 +28,17 @@
       <div data-sn="s14"><div class="specs"><p>Google Pixel 5</p><p>Outubro (2020)</p><p>Android 11 (Red Velvet Cake)</p></div></div>
       <div data-sn="s15"><div class="specs"><p>Google Pixel 6</p><p>Outubro (2021)</p><p>Android 12 (Snow Cone)</p></div></div>
       <div data-sn="s16"><div class="specs"><p>Google Pixel 7</p><p>Outubro (2022)</p><p>Android 13 (Tiramissu)</p></div></div>
-      <div data-sn="s17"><div class="specs"></div>
+      <div data-sn="s17"></div>
+      <div data-sn="s18"><h2>Desenvolvido por @todearaujo</h2></div>
     </section>
 
     <section id="phones">
 
       <div id="inicio" class="s00 show">
-        <h2>Linha do tempo</h2>
-        <h1>Celulares</h2>
-        <img src="images/logogoogle.png" alt="Phone by Google"/>
-        <h3>Navegue para descobrir <p class="arrasta">☝️</p></h3>
+        <h2>Linha do tempo dos <img height="20vmin"  src="images/logogoogle.png" alt="Phone by Google"/> Phones</h2>
+        <h1>Como eles cresceram (ou diminuíram) ao longo do tempo?<br><br><b>Meça você mesmo!</b></h1>
+        
+        <h4 class="arrasta">⬆️📏</p></h4>
       </div>
 
       <div class="s01">
@@ -107,7 +108,10 @@
       <div class="s17">
         <img id="v17" src="images/phones/17-vertical.png" alt="Família de telefones Google"/>
         <img id="h17" src="images/phones/17-horizontal.png" alt="Família de telefones Google"/>
-        <h2>por @todearaujo</h2>
+      </div>
+
+      <div class="s18">
+       
       </div>
 
     </section>
