--- a/scroll/index.html
+++ b/scroll/index.html
@@ -36,7 +36,7 @@
 
     <section id="phones">
 
-      <div id="inicio" class="s00 show">
+      <div class="s00 show">
         <h2>Linha do tempo dos <img height="20vmin"  src="images/logogoogle.png" alt="Phone by Google"/> Phones</h2>
         <h1>Como eles cresceram (ou diminuíram) ao longo do tempo?<br><br><b>Meça você mesmo!</b></h1>
         
