--- a/scroll/index.html
+++ b/scroll/index.html
@@ -6,6 +6,7 @@
     <title>Linha do tempo dos Google Phones</title>
     <link rel="stylesheet" href="scroll.css" />
     <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="devices.min.css" type="text/css">
 </head>
 <body>
   <main>
@@ -36,10 +37,24 @@
     <section id="phones" class="hideruler">
 
       <div class="s00 show">
-        <h2>Linha do tempo dos <img height="20vmin"  src="images/logogoogle.png" alt="Phone by Google"/> Phones</h2>
-        <h1>Como eles cresceram (ou diminuíram) ao longo do tempo?<br><br><b>Meça você mesmo!</b></h1>
-        
-        <h4 class="arrasta">⬆️📏</p></h4>
+        <div class="marvel-device nexus5">
+          <div class="top-bar"></div>
+          <div class="sleep"></div>
+          <div class="volume"></div>
+          <div class="camera"></div>
+          <div class="screen">
+            <div id="screenh">
+              <h2>Linha do tempo dos <img height="20vmin"  src="images/logogoogle.png" alt="Phone by Google"/> Phones</h2>
+              <h1>Como eles cresceram (ou diminuíram) ao longo do tempo?<br><br><b>Meça você mesmo!</b></h1>
+              <h4 class="arrasta">⬆️📏</p></h4>
+            </div>
+            <div id="screenv">
+              <h2>Linha do tempo dos <img height="20vmin"  src="images/logogoogle.png" alt="Phone by Google"/> Phones</h2>
+              <h1>Como eles cresceram (ou diminuíram) ao longo do tempo?<br><br><b>Meça você mesmo!</b></h1>
+              <h4 class="arrasta">⬆️📏</p></h4>
+            </div>
+          </div>  
+        </div>             
       </div>
 
       <div class="s01">
