--- a/scroll/index.html
+++ b/scroll/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linha do tempo dos Google Phones</title>
+    <meta property="og:image" content="images/ogimage.png"/>
     <link rel="stylesheet" href="scroll.css" />
     <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="devices.min.css" type="text/css">
 </head>
 <body>
   <main>
-
     <section id="tamanho">
 
       <div class="ts00 show"></div>
@@ -144,14 +143,13 @@
       <div data-sn="s10"><div class="specs"><p>Google Pixel</p><p>Outubro (2016)</p><p>Nougat (7.1)</p></div></div>
       <div data-sn="s11"><div class="specs"><p>Google Pixel 2</p><p>Outubro (2017)</p><p>Oreo (8.0)</p></div></div>
       <div data-sn="s12"><div class="specs"><p>Google Pixel 3</p><p>Outubro (2018)</p><p>Pie (9.0)</p></div></div>
-      <div data-sn="s13"><div class="specs"><p>Google Pixel 4</p><p>Outubro (2019)</p><p>10.0</p></div></div>
+      <div data-sn="s13"><div class="specs"><p>Google Pixel 4</p><p>Outubro (2019)</p><p>10</p></div></div>
       <div data-sn="s14"><div class="specs"><p>Google Pixel 5</p><p>Outubro (2020)</p><p>Android 11 (Red Velvet Cake)</p></div></div>
       <div data-sn="s15"><div class="specs"><p>Google Pixel 6</p><p>Outubro (2021)</p><p>Android 12 (Snow Cone)</p></div></div>
       <div data-sn="s16"><div class="specs"><p>Google Pixel 7</p><p>Outubro (2022)</p><p>Android 13 (Tiramissu)</p></div></div>
       <div data-sn="s17"></div>
     
     </section>
-
   </main>
   <script src="scroll.js"></script>
 </body>
