--- a/scroll/index.html
+++ b/scroll/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linha do tempo dos Google Phones</title>
+    <meta content="Como eles cresceram (ou diminuíram) ao longo do tempo? Meça você mesmo!" name="description">
     <meta property="og:image" content="images/ogimage.png"/>
     <link rel="stylesheet" href="scroll.css" />
     <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
