--- a/calc/index.html
+++ b/calc/index.html
@@ -11,7 +11,8 @@
     <h1>Gerações</h1>
 
     <p>
-      Quem nasce em <input placeholder="19XX" autofocus> é da geração <output>…</output>
+      Quem nasce em <input placeholder="AAAA" autofocus> é da geração: 
+      <!-- <output>…</output> -->
     </p>
 
     <div class="baldes"></div>
