--- a/calc/index.html
+++ b/calc/index.html
@@ -2,18 +2,16 @@
 
 <html>
   <head>
-    <title>Sobre gerações</title>
+    <title>Calculadora de gerações</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
 
-    <h1>Gerações</h1>
-
-    <p>
-      Quem nasce em <input placeholder="AAAA" autofocus> é da geração: 
-      <!-- <output>…</output> -->
-    </p>
+    <section>
+      <h1>Calculadora de gerações</h1>
+      <p>Nasceu em <input placeholder="AAAA" autofocus>, geração...</p>
+    </section>
 
     <div class="baldes"></div>
   
