--- a/calc/index.html
+++ b/calc/index.html
@@ -1,21 +1,34 @@
-<!doctype html>
-
-<html>
+<!DOCTYPE html>
+  <html lang="pt-BR">
   <head>
-    <title>Calculadora de gerações</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="app.css">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Calculadora de gerações</title>
+      <meta content="Como eles cresceram (ou diminuíram) ao longo do tempo? Meça você mesmo!" name="description">
+      <meta property="og:image" content="images/ogimage.png"/>
+      <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
+      <link rel="stylesheet" href="app.css">
   </head>
+
   <body>
 
-    <section>
-      <h1>Calculadora de gerações</h1>
-      <p>Nasceu em <input placeholder="AAAA" autofocus>, geração...</p>
-    </section>
+    <main>
 
-    <div class="baldes"></div>
-  
-    <script src="app.js"></script>
+      <section id="titulo">
+        <h1>Calculadora de gerações</h1>
+        <p>Nasceu em <input placeholder="AAAA" autofocus>, geração...</p>
+      </section>
+
+      <section id="grafico">
+      <div class="blocos"></div>
+      </section>
+
+      <section id="card">
+      </section>
+
+    </main>
+      
+      <script src="app.js"></script>
 
   </body>
 </html>
