--- a/calc/index.html
+++ b/calc/index.html
@@ -3,9 +3,9 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Calculadora de gerações</title>
-      <meta content="Como eles cresceram (ou diminuíram) ao longo do tempo? Meça você mesmo!" name="description">
-      <meta property="og:image" content="images/ogimage.png"/>
+      <title>Insira um ano e descubra a respectiva geração</title>
+      <meta content="É a calculadora de gerações!" name="description">
+      <meta property="og:image" content="ogimage.png"/>
       <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
       <link rel="stylesheet" href="app.css">
   </head>
@@ -16,6 +16,7 @@
 
       <section id="titulo">
         <h1>Calculadora de gerações</h1>
+        <h2>Insira um ano para descobrir a do período</h2>
         <p>Nasceu em <input placeholder="AAAA" autofocus>, geração...</p>
       </section>
 
