--- a/calc/index.html
+++ b/calc/index.html
@@ -25,6 +25,14 @@
       </section>
 
       <section id="card">
+        <div id="card-i">
+          <div id="card-f">
+          <div>🛈</div>
+          </div>
+          <div id="card-v" data-info="">
+
+          </div>  
+        </div>
       </section>
 
     </main>
