--- a/calc/index.html
+++ b/calc/index.html
@@ -40,9 +40,7 @@
           </div>
           </div>
           <div id="card-v">
-          Y: Millenialls
-
-          Teste
+          Y: Millenials
           </div>  
         </div>
       </section>
