--- a/calc/index.html
+++ b/calc/index.html
@@ -15,7 +15,7 @@
     <main>
       <section id="titulo">
         <h1>Calculadora de gerações</h1>
-        <h2>Insira um ano  e arraste <<< para descobrir</h2>
+        <h2>Insira um ano  e arraste para descobrir</h2>
         <p>Nasceu em <input placeholder="AAAA" autofocus>, geração...</p>
       </section>
 
@@ -23,7 +23,7 @@
       <div class="blocos"></div>
       </section>
 
-      <section>
+      <section id="cards">
         <div id="card">
           <div id="card-i">
             <div id="card-f">
