--- a/calc/index.html
+++ b/calc/index.html
@@ -14,9 +14,11 @@
   <body>
     <main>
       <section id="titulo">
-        <h1>Calculadora de gerações</h1>
-        <h2>Insira um ano  e arraste para descobrir</h2>
-        <p>Nasceu em <input placeholder="AAAA" autofocus>, geração...</p>
+        <h1>De que geração você é?</h1>
+        <h2>Ano de nascimento</h2>
+        <input placeholder="AAAA" autofocus>
+        <p>4 dígitos</p>
+        <button id="btnmostrar" type="button" onclick="mostrasecao(grafico)">Calcular</button>
       </section>
 
       <section id="grafico">
