--- a/calc/index.html
+++ b/calc/index.html
@@ -18,7 +18,7 @@
         <h2>Ano de nascimento</h2>
         <input placeholder="AAAA" autofocus>
         <p>4 dígitos</p>
-        <button id="btnmostrar" type="button" onclick="mostrasecao(grafico)">Calcular</button>
+        <button class="btnmostrar" type="button" onclick="mostrasecao(grafico)">Calcular</button>
       </section>
 
       <section id="grafico">
