--- a/calc/index.html
+++ b/calc/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <section id="titulo">
-        <h1>Qual geração você é?</h1>
+        <h1>De qual geração você é?</h1>
         <h2>Ano de nascimento</h2>
         <input placeholder="AAAA" autofocus>
         <p>4 dígitos</p>
@@ -23,6 +23,7 @@
 
       <section id="grafico">
       <div class="blocos"></div>
+      <div class="voce"></div>
       </section>
 
       <section id="cards">
