--- a/calc/index.html
+++ b/calc/index.html
@@ -17,8 +17,8 @@
         <h1>De qual geração você é?</h1>
         <h2>Ano de nascimento</h2>
         <input placeholder="AAAA" autofocus>
-        <p>4 dígitos</p>
-        <button class="btnmostrar" type="button" onclick="mostrasecao(grafico)">Calcular</button>
+        <p>Insira 4 dígitos</p>
+        <button class="btnmostrar" type="button" onclick="mostraSecao(grafico)">Calcular</button>
       </section>
 
       <section id="grafico">
