--- a/calc/index.html
+++ b/calc/index.html
@@ -17,7 +17,7 @@
         <h2>Ano de nascimento</h2>
         <input placeholder="AAAA" autofocus>
         <p>Insira 4 dígitos</p>
-        <button class="btnmostrar" type="button" onclick="mostraSecao(grafico)">Calcular</button>
+        <button class="btnmostrar" type="button" onclick="calcular(validar())">Calcular</button>
       </section>
 
       <section id="grafico">
