--- a/calc/index.html
+++ b/calc/index.html
@@ -15,10 +15,12 @@
     <main>
       <section id="titulo">
         <h1>De qual geração você é?</h1>
-        <h2>Ano de nascimento</h2>
-        <input placeholder="AAAA" autofocus>
-        <p>Insira 4 dígitos</p>
-        <button class="btnmostrar" type="button" onclick="calcular(validar())">Calcular</button>
+        <div>
+          <h2>Ano de nascimento</h2>
+          <input placeholder="AAAA" autofocus>
+          <p>Insira 4 dígitos</p>
+          <button class="btnmostrar" type="button" onclick="calcular(validar())">Calcular</button>
+        </div>
       </section>
 
       <section id="grafico">
