--- a/calc/index.html
+++ b/calc/index.html
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <div id="help">Navegação horizontal <p class="swipeleft">👆</p></div>
+    <div id="helpswipe">Navegação horizontal <p class="swipeleft">👆</p></div>
+    <div id="helptouch"><p class="touch">👇</p> para interagir</div>
     <main>
       <section id="titulo">
         <h1>De qual geração você é?</h1>
